replace URL with URI