@@ -21,8 +21,7 @@
 
 package com.xpn.xwiki.web;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
@@ -32,7 +31,7 @@ import com.google.common.base.Strings;
 public interface XWikiRequest extends HttpServletRequest {
 
   String EXEC_CONTEXT_KEY = "xwiki.request";
-  String URL_EXEC_CONTEXT_KEY = "xwiki.request.url";
+  String URI_EXEC_CONTEXT_KEY = "xwiki.request.uri";
   String ACTION_EXEC_CONTEXT_KEY = "xwiki.request.action";
 
   String get(String name);
@@ -41,12 +40,12 @@ public interface XWikiRequest extends HttpServletRequest {
 
   Cookie getCookie(String cookieName);
 
-  default URL getURL() throws MalformedURLException {
+  default URI getUri() {
     String requestURL = getRequestURL().toString();
     if (!Strings.isNullOrEmpty(getQueryString())) {
       requestURL += "?" + getQueryString();
     }
-    return new URL(requestURL);
+    return URI.create(requestURL);
   }
 
 }
